@@ -1,8 +1,9 @@
 gcl (2.6.1-40) unstable; urgency=low
 
   * gcc-3.4 support
+  * Proper isnormal default courtesy of Magnus Henoch
 
- -- Camm Maguire <camm@enhanced.com>  Tue, 11 May 2004 18:17:59 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed, 26 May 2004 02:02:15 +0000
 
 gcl (2.6.1-39) unstable; urgency=high
 
